Alignment, fixed CSS spacing from hard tabs to soft tabs

--- a/styles/website.css
+++ b/styles/website.css
@@ -43,7 +43,7 @@ a.plugin-anchor {
 /* summary panel themes and transitions */
 .book-summary ul.summary li a:hover {
     text-decoration: none;
-	box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.2);
 }
 .book-summary ul.summary li.active > a {
     box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.2);
@@ -78,20 +78,21 @@ kbd {
 
 /* copy code button styling */
 .code-wrapper i {
-	color: inherit;
-	font-size: 0.9em;
-	opacity: 0.5;
-	transition: all 150ms ease;
+    color: inherit;
+    font-size: 0.9em;
+    opacity: 0.5;
+    transition: all 150ms ease;
 }
 .fa.fa-clone.t-copy:hover {
-	opacity: 1;
+    opacity: 1;
+}
 }
 
 /* theme-0 and base attributes */
 /* page background */
 .book-body, .markdown-section, .normal.markdown-section {
     background-color: #FFFFFF;
-	color: #0C0C0C;
+    color: #0C0C0C;
 }
 
 /* sidebar background color */
@@ -113,7 +114,7 @@ kbd {
 /* sidebar header text color */
 .book-summary ul.summary li.header {
     color: #8F8F8F;
-	padding-top: 24px /* base attr */
+    padding-top: 24px /* base attr */
 }
 
 /* navigation colors */
@@ -135,7 +136,7 @@ kbd {
 #book-search-input {
     background-color: #FFFFFF;
     margin-bottom: 0px; /* base attr */
-	color: #0C0C0C;
+    color: #0C0C0C;
 }
 
 /* dropdown menu */
@@ -157,11 +158,11 @@ kbd {
 
 /* hr colors */
 .markdown-section h1 {
-	font-size: 2em; /* base attr */
+    font-size: 2em; /* base attr */
     border-bottom: 2px solid #D8D8D8;
 }
 .markdown-section h2 {
-	font-size: 1.75em; /* base attr */
+    font-size: 1.75em; /* base attr */
     border-bottom: 1px solid #D8D8D8;
 }
 .markdown-section hr {
@@ -192,7 +193,7 @@ kbd {
 
 .book.color-theme-1 .book-body, .book.color-theme-1 .book-body .page-wrapper .page-inner section, .book.color-theme-1 .book-body .page-wrapper .page-inner section.normal {
     background-color: #f3eacb;
-	color: #663A0F;
+    color: #663A0F;
 }
 
 /* sidebar background color + subchapter text color */
@@ -201,8 +202,8 @@ kbd {
     background: #BE9470;
 }
 .book.color-theme-1 .book-summary ul.summary li.active > a, .book.color-theme-1 .book-summary ul.summary li a:hover {
-	background: #A68162;
-	box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.2);
+    background: #A68162;
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.2);
     color: #42260A;
 }
 
@@ -291,7 +292,7 @@ kbd {
 /* page background */
 .book.color-theme-2 .book-body, .book.color-theme-2 .book-body .page-wrapper .page-inner section, .book.color-theme-2 .book-body .page-wrapper .page-inner section.normal {
     background-color: #1C1F2B;
-	  color: #DFEBF5;
+    color: #DFEBF5;
 }
 
 /* sidebar background color + subchapter text color */
@@ -404,26 +405,26 @@ kbd {
 
 /* fonts */
 .book.font-family-0 {
-	font-family: 'Noto Serif', serif !important;
+    font-family: 'Noto Serif', serif !important;
 }
 .book.font-family-1, .book-summary {
     font-family: 'Fira Sans', sans-serif !important;
 }
 /* fixing code not scaling with text-scaling */
 .markdown-section code, .markdown-section pre {
-	font-family: 'Fira Mono', monospace !important;
+    font-family: 'Fira Mono', monospace !important;
 }
 .markdown-section pre {
-	font-size: 1em;
+    font-size: 1em;
 }
 .markdown-section code {
-	font-size: 1em;
+    font-size: 1em;
 }
 /* size and transparency for line numbers */
 .code-wrapper pre > code > span.code-line::before {
-	color: inherit;
-	opacity: 0.75;
-	font-size: 1em;
+    color: inherit;
+    opacity: 0.75;
+    font-size: 1em;
 }
 /* sidebar shadowing */
 
@@ -431,7 +432,7 @@ kbd {
     border-right: none;
 }
 .book.with-summary .book-summary {
-	box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
 }
 .book.color-theme-1 .book-summary {
     border-right: none;
@@ -440,10 +441,10 @@ kbd {
     border-right: none;
 }
 
- /* header centering */
- .book-header h1 {
+/* header centering */
+.book-header h1 {
     padding-left: 79px;
- }
+}
 
 /* figure margins and padding */
 .markdown-section figure {
